# internal/api/film/create.go
@@ -12,35 +12,40 @@ import (
     "main/internal/service/film"
 )
 
-func validateNewFilm(bytes []byte) (*film.NewFilm, error) {
+func validateNewFilm(bytes []byte) (*film.NewFilm, []int32, error) {
     json := gjson.ParseBytes(bytes)
-    date, err := time.Parse("2006-01-02", json.Get("ReleaseDate").String())
+    date, err := time.Parse("2006-01-02", json.Get("release_date").String())
     if err != nil {
-        return nil, err
+        return nil, nil, err
     }
     f := &film.NewFilm{
-        Title:       json.Get("Title").String(),
-        Description: json.Get("Description").String(),
+        Title:       json.Get("title").String(),
+        Description: json.Get("description").String(),
         ReleaseDate: date,
-        Rating:      int8(json.Get("Rating").Int()),
+        Rating:      int8(json.Get("rating").Int()),
+    }
+    actors := json.Get("actors").Array()
+    actorsIds := make([]int32, 0, len(actors))
+    for _, actor := range actors {
+        actorsIds = append(actorsIds, int32(actor.Int()))
     }
     if len(f.Title) < 1 || len(f.Title) > 150 || len(f.Description) < 1 ||
         len(f.Description) > 1000 || f.Rating < 1 || f.Rating > 10 {
         logs.Log.Errorw("Invalid film data", "film", f)
-        return nil, errors.New("invalid film data")
+        return nil, nil, errors.New("invalid film data")
     }
-    return f, nil
+    return f, actorsIds, nil
 }
 
 func (h *Handler) CreateFilm(w http.ResponseWriter, r *http.Request) {
     res, _ := io.ReadAll(r.Body)
-    f, err := validateNewFilm(res)
+    f, actors, err := validateNewFilm(res)
     if err != nil {
         logs.Log.Errorw("Failed to validate film", "film", f, "err", err)
         http.Error(w, "Failed to validate film", http.StatusBadRequest)
         return
     }
-    id, err := h.serv.CreateFilm(r.Context(), f)
+    id, err := h.serv.CreateFilmWithActors(r.Context(), f, actors)
     if err != nil {
         logs.Log.Errorw("Failed to create film", "film", f, "err", err)
         http.Error(w, "Failed to create film", http.StatusInternalServerError)
